--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@ html {
 
 body {
   font-family: "Segoe UI", sans-serif;
-  background-color: lightsteelblue;
+  background-color: rgb(229, 229, 229);
 }
+
 
 body,
 h1,
